Adição do filtro no swagger de usuarios ativos e inativos, bem como esse campo em si no banco de dados
